# MultiplayerTetris

./: .gitignore  Cargo.toml  HW1 - Tetris Architecture Document.md  README.md  RUNNING.md  check.json  client.md  error.txt  rankings.json  renderer.md  run.sh  run_mac.sh  server.md  softwareArchitecture.md
client/: Cargo.toml
client/src/: main.rs
renderer/: Cargo.toml  index.html
renderer/src/: main.rs
server/: Cargo.toml
server/src/: game.rs  lobby.rs  main.rs  session.rs
shared/src/: lib.rs
