[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
rand = "0.8"
